--- a/JS-2.1/index1.html
+++ b/JS-2.1/index1.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>eShop</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </head>
 
 <body>
