--- a/JS_2-2/index2.html
+++ b/JS_2-2/index2.html
@@ -3,19 +3,21 @@
 
 <head>
     <title>eShop</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <script src="script1.js"></script>
+    <script src="script2.js"></script>
 </head>
 
 <body>
     <header class="header">
         <div class="logo"><img class="img" src="images/85_32833.jpg" alt="logo"></div>
-        <button class="cart-button" type="button">Корзина</button>
+        <div class="container"> <button class="cart-button" type="button">Корзина</button></div>
     </header>
     <main>
         <div class="goods-list"></div>
+        <div class="goods-total"></div>
     </main>
+    <hr>
     <footer class="footer">Все права защищены</footer>
 
 </body>
