--- a/JS_2-3/index3.html
+++ b/JS_2-3/index3.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eShop</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style3.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <script src="script2.js"></script>
+    <script src="script3.js"></script>
+
 </head>
 
 <body>
@@ -13,13 +16,12 @@
         <div class="logo"><img class="img" src="images/85_32833.jpg" alt="logo"></div>
         <div class="container"> <button class="cart-button" type="button">Корзина</button></div>
     </header>
-    <main>
+    <main class="container">
         <div class="goods-list"></div>
         <div class="goods-total"></div>
     </main>
     <hr>
     <footer class="footer">Все права защищены</footer>
-
 </body>
 
 </html>
