--- a/JS_2_1/index.html
+++ b/JS_2_1/index.html
@@ -16,7 +16,7 @@
     <main>
         <div class="goods-list"></div>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">JS</footer>
 
 </body>
 
